dropped step nav feature renamed faq to support tpl and scss file fix text widget css fixed nested dropdowns z-index

--- a/assets/scss/theme/snippets/_menus.scss
+++ b/assets/scss/theme/snippets/_menus.scss
@@ -9,6 +9,7 @@
 	color: inherit;
 	flex-wrap: nowrap;
 	position: relative;
+	text-decoration: none !important;
 	transition: all 0.1s linear;
 	.menu_icon {
 		display: block;
@@ -76,6 +77,7 @@ svg.arrow {
 	}
 }
 .arrow_hide > [data-toggle="dropdown"], .arrow_hide > [data-toggle="collapse"] {> svg.arrow {display: none;}}
+.opened_menu_dropdown {z-index: 1001;}
 
 
 // menu list
@@ -118,3 +120,8 @@ svg.arrow {
 }
 @media (min-width: 992px) {.menu_nested_collapse {@include nested_collapse();}}
 @media (max-width: 991px) {.menu > .menu_nested_collapse {@include nested_collapse();}}
+
+
+// widgets
+.yspl_win_title {display: none;}
+.textwidget * {margin: 0;}
